--- a/src/index.css
+++ b/src/index.css
@@ -66,3 +66,17 @@ button:focus-visible {
     background-color: #f9f9f9;
   }
 }
+
+.starshipCards {
+  border: solid;
+  margin: 2px;
+  border-radius: 10px;
+  background-color: gainsboro;
+}
+
+button {
+  border: solid;
+  margin: 2px;
+  border-radius: 10px;
+  background-color: gainsboro;
+}
